--- a/index.html
+++ b/index.html
@@ -14,33 +14,56 @@
   <title>[Blogr]</title>
 </head>
 <body>
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
-  
-  Login
-  Sign Up
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
+  <div class="wrapper">
+  <header class="header">
+    <div class="header__nav-logo-container">
+      <img src="/images/logo.svg" alt="Blogr landing-page text logo." class="header__logo">
+      <nav class="header__nav">
+        <ul class="header-nav__ul">
+          <li>
+            <button class="header-nav__btn">Product</button>
+            <li class="hidden header-nav__links-container">
+              <a href="/">Overview</a>
+              <a href="/">Pricing</a>
+              <a href="/">Marketplace</a>
+              <a href="/">Features</a>
+              <a href="/">Integrations</a>
+            </li>
+          </li>
+          <li>
+            <button class="header-nav__btn">Company</button>
+            <li class="hidden header-nav__links-container">
+              <a href="/">About</a>
+              <a href="/">Team</a>
+              <a href="/">Blog</a>
+              <a href="/">Careers</a>
+            </li>
+          </li>
+          <li>
+            <button class="header-nav__btn">Connect</button>
+            <li class="hidden header-nav__links-container">
+              <a href="/">Contact</a>
+              <a href="/">Newsletter</a>
+              <a href="/">LinkedIn</a>
+            </li>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__login-signup-container"> 
+        <a href="/" class="login">Login</a>
+        <button class="sign-up header-btn">Sign Up</button>
+      </div>
+    </div>
+    <div class="header__hero-container">
+      <section>
+        <h1 class="hero-title">A modern publishing platform</h1>
+        <h3 class="hero__sub-title">Grow your audience and build your online brand</h3>
+        <button class="start-free header-btn">Start for Free</button>
+        <button class="learn-more header-btn-transparent">Learn More</button>
+      </section>
+    </div>
+  </header>
+  <main class="main">
   Start for Free
   Learn More
 
@@ -89,5 +112,7 @@
   Contact
   Newsletter
   LinkedIn
+  </main>
+  </div>
 </body>
 </html>
