--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 </head>
 <body>
   <div class="wrapper">
+
+
   <header class="header">
     <div class="header__nav-logo-container">
       <img src="/images/logo.svg" alt="Blogr landing-page text logo." class="header__logo">
+
       <nav class="header__nav">
         <ul class="header-nav__ul">
           <li>
-            <button class="header-nav__btn">Product</button>
+            <button class="header-nav__btn white">Product</button>
             <li class="hidden header-nav__links-container">
               <a href="/">Overview</a>
               <a href="/">Pricing</a>
@@ -31,7 +34,7 @@
             </li>
           </li>
           <li>
-            <button class="header-nav__btn">Company</button>
+            <button class="header-nav__btn white">Company</button>
             <li class="hidden header-nav__links-container">
               <a href="/">About</a>
               <a href="/">Team</a>
@@ -40,7 +43,7 @@
             </li>
           </li>
           <li>
-            <button class="header-nav__btn">Connect</button>
+            <button class="header-nav__btn white">Connect</button>
             <li class="hidden header-nav__links-container">
               <a href="/">Contact</a>
               <a href="/">Newsletter</a>
@@ -49,50 +52,81 @@
           </li>
         </ul>
       </nav>
+
       <div class="header__login-signup-container"> 
-        <a href="/" class="login">Login</a>
+        <a href="/" class="login white">Login</a>
         <button class="sign-up header-btn">Sign Up</button>
       </div>
     </div>
+
     <div class="header__hero-container">
       <section>
-        <h1 class="hero-title">A modern publishing platform</h1>
-        <h3 class="hero__sub-title">Grow your audience and build your online brand</h3>
+        <h1 class="hero-title white">A modern publishing platform</h1>
+        <h4 class="hero__sub-title white">Grow your audience and build your online brand</h4>
         <button class="start-free header-btn">Start for Free</button>
-        <button class="learn-more header-btn-transparent">Learn More</button>
+        <button class="learn-more white">Learn More</button>
       </section>
     </div>
   </header>
+  
+
   <main class="main">
-  Start for Free
-  Learn More
 
-  Designed for the future
+    <div class="future-container">
+      <h2 class="future__title darkblue h2">Designed for the future</h2>
+      <section class="flex-parent">
+        <img src="/images/illustration-editor-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="future__swiggle-img flex-child">
+        <!-- <picture> for diff img displays -->
+        <article class="flex-child">
+          <h3 class="h3 darkblue">Introducing an extensible editor</h3>
+          <p class="content-width">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+            change the looks of a blog.
+          </p>
+          <h3 class="h3 darkblue">Robust content management</h3>
+          <p class="content-width">Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+          </p>
+        </article>
+      </section>
+    </div>
 
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
+    <div class="infastructure-container">
+      <section class="flex-parent">
+        <img src="/images/illustration-phones.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="infastructure__phones-img flex-child">
+        <article class="flex-child">
+          <h2 class="h2 white">State of the Art Infrastructure</h2>
+          <p class="content-width">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+          </p>
+        </article>
+      </section>
+    </div>
 
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+    <div class="free-container">
+      <section class="flex-parent">
+        <img src="/images/illustration-laptop-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="free__laptop-img flex-child">
+        <!-- <picture> for diff img displays -->
+        <article class="flex-child">
+          <h3 class="h3 darkblue">Free, open, simple</h3>
+          <p class="content-width">Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+            features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+            and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+          </p>
+          <h3 class="h3 darkblue">Powerful tooling</h3>
+          <p class="content-width"> Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+            capable of producing even the most complicated sites.
+          </p>
+        </article>
+      </section>
+    </div>
 
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+    <footer class="footer">
 
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
+    </footer>
+  
+    Product
 
   Overview
   Pricing
