--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
   <header class="header">
     <div class="header__nav-logo-container">
-      <img src="/images/logo.svg" alt="Blogr landing-page text logo." class="header__logo">
+      <img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo">
+      <!-- add clickable logo -->
 
       <nav class="header__nav">
         <ul class="header-nav__ul">
@@ -76,7 +77,7 @@
       <h2 class="future__title darkblue h2">Designed for the future</h2>
       <section class="flex-parent">
         <img src="/images/illustration-editor-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="future__swiggle-img flex-child">
-        <!-- <picture> for diff img displays -->
+          <!-- <picture> for diff img displays + potential container -->
         <article class="flex-child">
           <h3 class="h3 darkblue">Introducing an extensible editor</h3>
           <p class="content-width">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
@@ -107,7 +108,7 @@
     <div class="free-container">
       <section class="flex-parent">
         <img src="/images/illustration-laptop-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="free__laptop-img flex-child">
-        <!-- <picture> for diff img displays -->
+          <!-- <picture> for diff img displays + potential container -->
         <article class="flex-child">
           <h3 class="h3 darkblue">Free, open, simple</h3>
           <p class="content-width">Blogr is a free and open source application backed by a large community of helpful developers. It supports 
@@ -123,30 +124,50 @@
     </div>
 
     <footer class="footer">
+      <div class="footer-content-wrapper">
+        <!-- potential container for img -->
+        <img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo">
+        <nav class="footer__nav">
+          <ul class="footer-nav__ul">
+            <li class="footer-nav-ul__heading">
+              <strong>Product</strong>
+            </li>
+            <li>
+              <a href="/">Overview</a>
+              <a href="/">Pricing</a>
+              <a href="/">Marketplace</a>
+              <a href="/">Features</a>
+              <a href="/">Integrations</a>
+            </li>
+          </ul>
 
-    </footer>
-  
-    Product
+          <ul class="footer-nav__ul">
+            <li class="footer-nav-ul__heading">
+              <strong>Company</strong>
+            </li>
+            <li>
+              <a href="/">About</a>
+              <a href="/">Team</a>
+              <a href="/">Blog</a>
+              <a href="/">Careers</a>
+            </li>
+          </ul>
 
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-  </main>
+          <ul class="footer-nav__ul">
+            <li class="footer-nav-ul__heading">
+              <strong>Connect</strong>
+            </li>
+            <li>
+              <a href="/">Contact</a>
+              <a href="/">Newsletter</a>
+              <a href="/">LinkedIn</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+     </footer>
+     
+    </main>
   </div>
 </body>
 </html>
