--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="header__login-signup-container"> 
         <a href="/" class="login white">Login</a>
-        <button class="sign-up header-btn">Sign Up</button>
+        <button class="sign-up header-btn-white">Sign Up</button>
       </div>
     </div>
 
@@ -64,7 +64,7 @@
       <section>
         <h1 class="hero-title white">A modern publishing platform</h1>
         <h4 class="hero__sub-title white">Grow your audience and build your online brand</h4>
-        <button class="start-free header-btn">Start for Free</button>
+        <button class="start-free header-btn-white">Start for Free</button>
         <button class="learn-more white">Learn More</button>
       </section>
     </div>
@@ -166,7 +166,7 @@
         </nav>
       </div>
      </footer>
-     
+
     </main>
   </div>
 </body>
