HTML complete - pre final run-through

--- a/index.html
+++ b/index.html
@@ -14,73 +14,72 @@
   <title>[Blogr]</title>
 </head>
 <body>
-  <div class="wrapper">
 
 
   <header class="header">
-    <div class="header__nav-logo-container">
-      <a href="/"><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
-      <button class="hamburger-btn">
-        <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
-      </button>
+    <div class="header__nav-logo-login-container">
+      <div class="header__nav-logo-container">
+        <a href="/"><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
+        <button class="hamburger-btn">
+          <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
+        </button>
 
-      <div class="header__mobile-nav-container">
-        <nav class="header__nav">
-          <ul class="header-nav__ul">
-            <li>
-              <button id="btn-product" class="header-nav__btn">
-                Product
-                <i class="arrow"></i>
-              </button>
-              <li class="hidden header-nav__links-container">
+        <div class="header__mobile-nav-container">
+          <nav class="header__nav">
+            <button id="btn-product" class="header-nav__btn">
+              Product
+              <i class="arrow"></i>
+            </button>
+            <ul class="header-nav__ul">
+              <li class="hidden">
                 <a href="/">Overview</a>
                 <a href="/">Pricing</a>
                 <a href="/">Marketplace</a>
                 <a href="/">Features</a>
                 <a href="/">Integrations</a>
               </li>
-            </li>
-            <li>
-              <button id="btn-company" class="header-nav__btn">
-                Company
-                <i class="arrow"></i>
-              </button>
-              <li class="hidden header-nav__links-container">
+            </ul>
+            <button id="btn-company" class="header-nav__btn">
+              Company
+              <i class="arrow"></i>
+            </button>
+            <ul class="header-nav__ul">
+              <li class="hidden">
                 <a href="/">About</a>
                 <a href="/">Team</a>
                 <a href="/">Blog</a>
                 <a href="/">Careers</a>
               </li>
-            </li>
-            <li>
-              <button id="btn-connect" class="header-nav__btn">
-                Connect
-                <i class="arrow"></i>
-              </button>
-              <li class="hidden header-nav__links-container">
+            </ul>
+            <button id="btn-connect" class="header-nav__btn">
+              Connect
+              <i class="arrow"></i>
+            </button>
+            <ul class="header-nav__ul">
+              <li class="hidden">
                 <a href="/">Contact</a>
                 <a href="/">Newsletter</a>
                 <a href="/">LinkedIn</a>
               </li>
-            </li>
-          </ul>
-        </nav>
-
-        <hr class="hr">
-
-        <div class="header__login-signup-container"> 
-          <a href="/" class="login">Login</a>
-          <button class="sign-up header-btn-white">Sign Up</button>
+            </ul>
+          </nav>
         </div>
+      </div>
+
+      <hr class="hr">
+
+      <div class="header__login-signup-container"> 
+        <a href="/" class="login">Login</a>
+        <button class="sign-up header-btn-white">Sign Up</button>
       </div>
     </div>
 
     <div class="header__hero-container">
       <section class="hero__flex-parent">
-        <h1 class="hero-title">A modern publishing platform</h1>
-        <h4 class="hero__sub-title">Grow your audience and build your online brand</h4>
+        <h1 class="hero-title white">A modern publishing platform</h1>
+        <h4 class="hero__sub-title white">Grow your audience and build your online brand</h4>
         <button class="start-free header-btn-white">Start for Free</button>
-        <button class="learn-more">Learn More</button>
+        <button class="learn-more white">Learn More</button>
       </section>
     </div>
   </header>
@@ -113,8 +112,8 @@
         <section class="flex-parent">
           <img src="/images/illustration-phones.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="infastructure__phones-img flex-child">
           <article class="flex-child">
-            <h2 class="h2">State of the Art Infrastructure</h2>
-            <p class="content-width">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+            <h2 class="h2 white">State of the Art Infrastructure</h2>
+            <p class="content-width white">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
               This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
             </p>
           </article>
@@ -141,10 +140,12 @@
     </div>
   </main>
 
+
   <footer class="footer">
     <div class="footer-content-wrapper">
       <!-- potential container for img -->
       <img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo">
+
       <nav class="footer__nav">
         <ul class="footer-nav__ul">
           <li class="footer-nav-ul__heading">
@@ -183,7 +184,6 @@
         </ul>
       </nav>
     </div>
-    </footer>
-  </div>
+  </footer>
 </body>
 </html>
