Updated classes + added reset styles

--- a/index.html
+++ b/index.html
@@ -76,17 +76,16 @@
 
     <div class="header__hero-container">
       <section class="hero__flex-parent">
-        <h1 class="hero-title white">A modern publishing platform</h1>
-        <h4 class="hero__sub-title white">Grow your audience and build your online brand</h4>
-        <button class="start-free header-btn-white">Start for Free</button>
-        <button class="learn-more white">Learn More</button>
+        <h1 class="hero__title white">A modern publishing platform</h1>
+        <h4 class="hero__description white">Grow your audience and build your online brand</h4>
+        <button class="btn-start-free header-btn-white">Start for Free</button>
+        <button class="btn-learn-more white">Learn More</button>
       </section>
     </div>
   </header>
   
 
   <main>
-    <div class="main-wrapper">
 
       <div class="future-container">
         <h2 class="future__title darkblue h2">Designed for the future</h2>
@@ -137,7 +136,7 @@
           </article>
         </section>
       </div>
-    </div>
+
   </main>
 
 
