--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
 
 
   <header class="header">
-    <div class="header__nav-logo-login-container">
-      <div class="header__nav-logo-container">
+    <div class="header__widesb">
         <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
-        <button class="hamburger-btn">
+        <!-- <button class="hamburger-btn">
           <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
-        </button>
-
-        <div class="header__mobile-nav-container">
+        </button> -->
+        <div class="header__mobilebg-nav-container">
           <nav class="header__nav">
             <button id="btn-product" class="header-nav__btn" type="button">
               Product
@@ -63,8 +61,6 @@
               </li>
             </ul>
           </nav>
-        </div>
-      </div>
 
       <hr class="hr">
 
@@ -72,6 +68,7 @@
         <a href="/" class="login">Login</a>
         <button class="sign-up header-btn-white">Sign Up</button>
       </div>
+     </div>
     </div>
 
     <div class="header__hero-container">
