Header up to mobile nav

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>[Blogr]</title>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,17 +12,16 @@
   <link rel="stylesheet" href="/normalise.css" type="text/css">
   <link rel="stylesheet" href="/style.css" type="text/css">
   <script defer src="/script.js"></script>
-  <title>[Blogr]</title>
 </head>
 <body>
 
 
   <header class="header">
-    <div class="header__widesb">
+    <div class="header__flexsb">
         <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
-        <!-- <button class="hamburger-btn">
+        <button class="hamburger-btn">
           <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
-        </button> -->
+        </button>
         <div class="header__mobilebg-nav-container">
           <nav class="header__nav">
             <button id="btn-product" class="header-nav__btn" type="button">
