--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <header class="header">
     <div class="header__flexsb">
         <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
-        <button class="hamburger-btn">
+        <button class="hamburger-btn-container">
           <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
         </button>
-        <div class="header__mobilebg-nav-container">
+        <div class="header__mobilebg-nav-container hidden" id="mobile-nav">
           <nav class="header__nav">
-            <button id="btn-product" class="header-nav__btn" type="button">
+            <button id="btn-product" class="header-nav__btn darkblue" type="button">
               Product
               <i class="arrow"></i>
             </button>
-            <ul class="header-nav__ul hidden">
+            <ul class="header-nav__ul">
               <li>
                 <a href="/">Overview</a>
                 <a href="/">Pricing</a>
@@ -37,11 +37,11 @@
                 <a href="/">Integrations</a>
               </li>
             </ul>
-            <button id="btn-company" class="header-nav__btn" type="button">
+            <button id="btn-company" class="header-nav__btn darkblue" type="button">
               Company
               <i class="arrow"></i>
             </button>
-            <ul class="header-nav__ul hidden">
+            <ul class="header-nav__ul">
               <li>
                 <a href="/">About</a>
                 <a href="/">Team</a>
@@ -49,11 +49,11 @@
                 <a href="/">Careers</a>
               </li>
             </ul>
-            <button id="btn-connect" class="header-nav__btn" type="button">
+            <button id="btn-connect" class="header-nav__btn darkblue" type="button">
               Connect
               <i class="arrow"></i>
             </button>
-            <ul class="header-nav__ul hidden">
+            <ul class="header-nav__ul">
               <li>
                 <a href="/">Contact</a>
                 <a href="/">Newsletter</a>
