Mobile nav v1 - complete

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <hr class="hr">
 
       <div class="header__login-signup-container"> 
-        <a href="/" class="login">Login</a>
+        <a href="/" class="login darkblue">Login</a>
         <button class="sign-up header-btn-white">Sign Up</button>
       </div>
      </div>
