--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <div class="header__login-signup-container"> 
         <a href="/" class="login darkblue">Login</a>
-        <button class="sign-up header-btn-white">Sign Up</button>
+        <button class="sign-up header-btn-white header-btn">Sign Up</button>
       </div>
      </div>
     </div>
@@ -75,8 +75,10 @@
       <section class="hero__flex-parent">
         <h1 class="hero__title white">A modern publishing platform</h1>
         <h4 class="hero__description white">Grow your audience and build your online brand</h4>
-        <button class="btn-start-free header-btn-white">Start for Free</button>
-        <button class="btn-learn-more white">Learn More</button>
+        <div class="hero__btns-container">
+          <button class="btn-start-free header-btn-white header-btn">Start for Free</button>
+          <button class="btn-learn-more white header-btn">Learn More</button>
+        </div>
       </section>
     </div>
   </header>
