Refactored + up to <main>

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <header class="header">
     <div class="header__flexsb">
         <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
-        <button class="hamburger-btn-container">
-          <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon" id="hamburger">
+        <button class="hamburger-btn">
+          <img src="/images/icon-hamburger.svg" alt="Interactive mobile hamburger icon." class="hamburger-icon hamburger-hidden" id="hamburger">
         </button>
         <div class="header__mobilebg-nav-container hidden" id="mobile-nav">
           <nav class="header__nav">
