Up to phone section in <main>

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </header>
   
 
-  <main>
+  <main class="main">
 
       <div class="future-container">
         <h2 class="future__title darkblue h2">Designed for the future</h2>
