Refactored + added img containers

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
       <div class="future-container">
         <h2 class="future__title darkblue h2">Designed for the future</h2>
         <section class="main__flex-parent">
-          <img src="/images/illustration-editor-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="future__swiggle-img main__flex-child">
-            <!-- <picture> for diff img displays + potential container -->
+          <aside class="main__flex-child">
+            <img src="/images/illustration-editor-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="future__swiggle-img main__flex-child">
+            <!-- <picture> for diff img displays -->
+          </aside>
           <article class="main__flex-child">
             <h3 class="h3 darkblue">Introducing an extensible editor</h3>
             <p class="content-width">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
@@ -108,8 +110,10 @@
 
       <div class="infastructure-container">
         <section class="main__flex-parent">
-          <img src="/images/illustration-phones.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="infastructure__phones-img main__flex-child">
-          <article class="main__flex-child">
+          <aside class="main__flex-child phone-flex-child">
+            <img src="/images/illustration-phones.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="infastructure__phones-img">
+          </aside>
+          <article class="main__flex-child phone-flex-child">
             <h2 class="h2 white">State of the Art Infrastructure</h2>
             <p class="content-width white">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
               This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
@@ -120,8 +124,10 @@
 
       <div class="free-container">
         <section class="main__flex-parent">
-          <img src="/images/illustration-laptop-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="free__laptop-img main__flex-child">
+          <aside class="main__flex-child">
+            <img src="/images/illustration-laptop-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="free__laptop-img main__flex-child">
             <!-- <picture> for diff img displays + potential container -->
+          </aside>
           <article class="main__flex-child">
             <h3 class="h3 darkblue">Free, open, simple</h3>
             <p class="content-width">Blogr is a free and open source application backed by a large community of helpful developers. It supports 
