Phone section completed

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h2 class="future__title darkblue h2">Designed for the future</h2>
         <section class="main__flex-parent">
           <aside class="main__flex-child">
-            <img src="/images/illustration-editor-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="future__swiggle-img main__flex-child">
+            <img src="/images/illustration-editor-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="future__swiggle-img">
             <!-- <picture> for diff img displays -->
           </aside>
           <article class="main__flex-child">
@@ -110,11 +110,11 @@
 
       <div class="infastructure-container">
         <section class="main__flex-parent">
-          <aside class="main__flex-child phone-flex-child">
+          <aside class="main__flex-child">
             <img src="/images/illustration-phones.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="infastructure__phones-img">
           </aside>
-          <article class="main__flex-child phone-flex-child">
-            <h2 class="h2 white">State of the Art Infrastructure</h2>
+          <article class="main__flex-child">
+            <h2 class="h2 white infastructure__title">State of the Art Infrastructure</h2>
             <p class="content-width white">With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
               This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
             </p>
