--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
       <div class="free-container">
         <section class="main__flex-parent">
           <aside class="main__flex-child">
-            <img src="/images/illustration-laptop-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="free__laptop-img main__flex-child">
-            <!-- <picture> for diff img displays + potential container -->
+            <img src="/images/illustration-laptop-mobile.svg" alt="Red, dark-slate blue and white graphic swiggle illustration." class="free__laptop-img">
+            <!-- <picture> for diff img displays -->
           </aside>
           <article class="main__flex-child">
-            <h3 class="h3 darkblue">Free, open, simple</h3>
+            <h3 class="h3 darkblue free-open-subtitle">Free, open, simple</h3>
             <p class="content-width">Blogr is a free and open source application backed by a large community of helpful developers. It supports 
               features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
               and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
@@ -147,7 +147,6 @@
 
   <footer class="footer">
     <div class="footer-content-wrapper">
-      <!-- potential container for img -->
       <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
 
       <nav class="footer__nav">
