Flexible footer + hero sections

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <footer class="footer">
     <div class="footer-content-wrapper">
-      <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="logo"></a>
+      <a href="/" aria-label="Interactive Blogr logo, directing to homepage."><img src="/images/logo.svg" alt="Blogr landing-page text logo." class="footer-logo"></a>
 
       <nav class="footer__nav">
         <ul class="footer-nav__ul">
