Header styles wider v1 complete

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               Product
               <i class="arrow"></i>
             </button>
-            <ul class="header-nav__ul">
+            <ul class="header-nav__ul product-ul">
               <li>
                 <a href="/">Overview</a>
                 <a href="/">Pricing</a>
@@ -41,7 +41,7 @@
               Company
               <i class="arrow"></i>
             </button>
-            <ul class="header-nav__ul">
+            <ul class="header-nav__ul company-ul">
               <li>
                 <a href="/">About</a>
                 <a href="/">Team</a>
@@ -53,7 +53,7 @@
               Connect
               <i class="arrow"></i>
             </button>
-            <ul class="header-nav__ul">
+            <ul class="header-nav__ul connect-ul">
               <li>
                 <a href="/">Contact</a>
                 <a href="/">Newsletter</a>
